logs/Slang/generic/member/class_member_test_22.sv.log
name: class_member_test_22
description: Test
should_fail: 0
tags: 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_22.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_22.sv:7:1: error: language feature not yet supported
class myclass;
^~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_22.sv:8:32: error: expected identifier
extern function sometype #(N+1)[N:0]subr(ducktype #(3) x);
                               ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_22.sv:8:37: error: expected ';'
extern function sometype #(N+1)[N:0]subr(ducktype #(3) x);
                                    ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_22.sv:8:37: error: expected member
extern function sometype #(N+1)[N:0]subr(ducktype #(3) x);
                                    ^~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_22.sv:8:57: error: expected declarator
extern function sometype #(N+1)[N:0]subr(ducktype #(3) x);
                                                        ^
